<resources>
    <string name="app_name">CadESaúde</string>
    <string name="action_configuracoes">Configurações</string>
    <string name="action_sobre">Sobre</string>
    <string name="action_Ajuda">Ajuda</string>
    <string name="titulo_config">Configurações</string>
    <string name="titulo_ajuda">Ajuda</string>
    <string name="titulo_sobre">Sobre</string>
    <string name="pref_municipios_preferidos_key">municipios_preferídos</string>
    <string name="pref_distancia_estabelecimentos_key">distancia_estabelecimentos</string>
    <string name="pref_info_key">info</string>
    <string name="pref_estabelecimentos_favoritos_key">estabelecimentos_favoritos</string>
    <string name="pref_estabelecimentos_favoritos_file">favoritos</string>
    <string name="municipios_preferidos_titulo">Municípios escolhidos:</string>
    <string name="distancia_estabelecimentos_titulo">Distância mostrada:</string>
    <string name="municipios_preferidos_subtitulo">Não há municípios selecionados</string>
    <string name="municipios_dialog_title">selecione os municípios</string>
    <string name="distancia_title_seekbar">Selecione a distância máxima</string>
    <string-array name="municipios_preferidos_default" />
    <string name="fab_filtro_tipo_estabelecimento">Tipo de estabelecimento</string>
    <string name="fab_filtro_tipo_atendimento">Tipo de atendimento</string>
    <string name="fab_filtro_tipo_convenio">Tipo de convênio</string>
    <string name="fab_filtro_tipo_servico">Tipo de serviço</string>
    <string name="fab_filtro_tipo_profissional">Tipo de profissional</string>
    <string name="fab_filtro_limpar_todos">Limpar filtros</string>
    <string name="appNome">CadESaúde</string>
    <string name="appDesc">Aplicativo desenvolvido por Jucemar Dimon como trabalho de conclusão do curso de Sistemas de Informações da Universidade Federal de Santa Catarina(UFSC). Este aplicativo tem como
        objetivo não somente a aplicação dos conhecimentos adquiridos ao longo do curso como também a criação de uma ferramenta para auxiliar o cidadão catarinense na busca por estabelecimentos de saúde na sua região.</string>
    <string name="appVersao">Versão do aplicativo</string>
    <string name="bdVersao">Versão do Banco de dados</string>
    <string name="cabecalho_ajuda">Neste menu do aplicativo você poderá tirar algunas dúvidas sobre termos específicos que são utilizados no sistema de cadastros de estabelecimentos de saúde do DATASUS.</string>
    <string name="label_btn_tipos_estabelecimentos">Tipos de estabelecimentos</string>
    <string name="label_btn_tipos_serviços">Tipos de serviços existentes</string>
    <string name="posto_de_saude_titulo">Posto de Saúde</string>
    <string name="posto_de_saude">Unidade destinada à prestação de assistência a uma determinada população, de forma programada ou não, por profissional de nível médio, com a presença intermitente ou não do profissional médico.</string>
    <string name="centro_saude_titulo">Centro de Saúde/Unidade Básica de Saúde</string>
    <string name="centro_saude">Unidade para realização de atendimentos de atenção básica e integral a uma população, de forma programada ou não, nas especialidades básicas, podendo oferecer assistência odontológica e de outros profissionais de nível superior. A assistência deve ser permanente e prestada por médico generalista ou especialista nestas áreas. Podendo ou não oferecer: SADT e Pronto atendimento 24 Horas.</string>
    <string name="policlinica_ttulo">Policlínica</string>
    <string name="policlinica">Unidade de saúde para prestação de atendimento ambulatorial em várias especialidades, incluindo ou não as especialidades básicas, podendo ainda ofertar outras especialidades não médicas. Podendo ou não oferecer: SADT e Pronto atendimento 24 Horas.</string>
    <string name="hospital_geral_titulo">Hospital Geral</string>
    <string name="hospital_geral">Hospital destinado à prestação de atendimento nas especialidades básicas, por especialistas e/ou outras especialidades médicas. Pode dispor de serviço de Urgência/Emergência. Deve dispor também de SADT de média complexidade. Podendo Ter ou não SIPAC.</string>
    <string name="hospital_especializado_titulo">Hospital Especializado</string>
    <string name="hospital_especializado">Hospital destinado à prestação de assistência à saúde em uma única especialidade/área. Pode dispor de serviço de Urgência/Emergência e SADT. Podendo Ter ou não SIPAC Geralmente de referência regional, macro regional ou estadual.</string>
    <string name="unidade_mista_titulo">Unidade Mista</string>
    <string name="unidade_mista">Unidade de saúde básica destinada à prestação de atendimento em atenção básica e integral à saúde, de forma programada ou não, nas especialidades básicas, podendo oferecer assistência odontológica e de outros profissionais, com unidade de internação, sob administração única. A assistência médica deve ser permanente e prestada por médico especialista ou generalista. Pode dispor de urgência/emergência e SADT básico ou de rotina.</string>
    <string name="pronto_socorro_geral_titulo">Pronto Socorro Geral</string>
    <string name="pronto_socorro_geral">Unidade destinada à prestação de assistência a pacientes com ou sem risco de vida, cujos agravos necessitam de atendimento imediato. Podendo ter ou não internação.</string>
    <string name="pronto_socorro_especializado_titulo">Pronto Socorro Geral</string>
    <string name="pronto_socorro_especializado">Unidade destinada à prestação de assistência em uma ou mais especialidades, a pacientes com ou sem risco de vida, cujos agravos necessitam de atendimento imediato.</string>
    <string name="consultorio_isolado_titulo">Consultório Isolado</string>
    <string name="consultorio_isolado">Sala isolada destinada à prestação de assistência médica ou odontológica ou de outros profissionais de saúde de nível superior.</string>
    <string name="clinica_titulo">Clínica/Centro de Especialidade</string>
    <string name="clinica">Clínica Especializada destinada à assistência ambulatorial em apenas uma especialidade/área da assistência.</string>
    <string name="sadt_titulo">Unidade de Serviço de Apoio de Diagnose e Terapia (SADT ISOLADO)</string>
    <string name="sadt">Unidades isoladas onde são realizadas atividades que auxiliam a determinação de diagnóstico e/ou complementam o tratamento e a reabilitação do paciente.</string>
    <string name="parto_isolado_titulo">Centro de Parto Normal Isolado</string>
    <string name="parto_isolado">Unidade intra-hospitalar ou isolada, especializada no atendimento da mulher no período gravídico puerperal.</string>
    <string name="hospital_dia_titulo">Hospital/Dia - Isolado</string>
    <string name="hospital_dia">Unidades especializadas no atendimento de curta duração com caráter intermediário entre a assistência ambulatorial e a internação.</string>
    <string name="labo_saude_publica_titulo">Laboratório Central de Saúde Pública</string>
    <string name="labo_saude_publica">Estabelecimento de Saúde que integra o Sistema Nacional de Laboratórios de Saúde Pública - SISLAB, em conformidade com normalização vigente.</string>
    <string name="centro_hemato_titulo">Centro de Atencao Hemoterapica e ou Hematologica</string>
    <string name="centro_hemato">Estabelecimento que realiza o ciclo do sangue, desde a captação do doador, processamento, testes sorológicos, testes imunohematológicos, distribuição e transfusão de sangue de maneira total ou parcial.</string>
    <string name="caps_titulo">Centro De Atenção Psicossocial (CAPS)</string>
    <string name="caps">Entende-se por Centro de Atenção Psicossocial o tipo de estabelecimento isolado com as especificações seguintes: Estabelecimento de saúde de esfera administrativa pública com serviçosde saúde mental abertos e comunitários do Sistema Único de Saúde SUS destinados a prestar atenção diária às pessoas que sofrem com transtornos mentais severos e persistentes, em sua área territorial, em regime de tratamento intensivo, semi-intensivo e não-intensivo. Devem oferecer cuidados clínicos e de reabilitação psicossocial e têm como objetivo substituir o modelo hospitalocêntrico, evitar internações, favorecer o exercício da cidadania e da inclusão social dos usuários e de suas famílias, e executar as atribuições de supervisão e regulamentação de rede de serviços de saúde mental, quando de natureza pública.</string>
    <string name="upa_titulo">Pronto Atendimento</string>
    <string name="upa">Estabelecimento autônomo não-hospitalar, que integra a Rede de Atenção às Urgências e Emergências, destinado à assistência aos pacientes acometidos por quadros de urgência e emergência, realizando o atendimento inicial, estabilizando o paciente e definindo a necessidade ou não de encaminhamento a serviços de maior complexidade.</string>
</resources>