<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:fab="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_busca_gps_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    tools:context="br.com.jucemar_dimon.cadesaude.BuscaGPSActivity">

    <android.support.design.widget.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/MeuTemaMaterial.AppBarOverlay">

        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar_actvt_busca_gps"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            app:popupTheme="@style/MeuTemaMaterial.PopupOverlay" />

    </android.support.design.widget.AppBarLayout>

    <include layout="@layout/content_busca_gps" />

    <com.github.clans.fab.FloatingActionMenu
        android:id="@+id/fab_filtro_menu"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="end|bottom"
        android:elevation="2dp"
        android:padding="@dimen/text_margin"
        android:visibility="gone"
        fab:menu_animationDelayPerItem="30"
        fab:menu_backgroundColor="#AAFFFFFF"
        fab:menu_buttonSpacing="0dp"
        fab:menu_colorNormal="#E53935"
        fab:menu_colorPressed="#FF5252"
        fab:menu_colorRipple="#99FFFFFF"
        fab:menu_fab_hide_animation="@anim/fab_scale_down"
        fab:menu_fab_label="Fechar"
        fab:menu_fab_show_animation="@anim/fab_scale_up"
        fab:menu_fab_size="normal"
        fab:menu_icon="@drawable/ic_filter_white_24dp"
        fab:menu_labels_colorNormal="#333333"
        fab:menu_labels_colorPressed="#444444"
        fab:menu_labels_colorRipple="#66FFFFFF"
        fab:menu_labels_cornerRadius="3dp"
        fab:menu_labels_ellipsize="none"
        fab:menu_labels_margin="0dp"
        fab:menu_labels_maxLines="-1"
        fab:menu_labels_padding="8dp"
        fab:menu_labels_paddingBottom="4dp"
        fab:menu_labels_paddingLeft="8dp"
        fab:menu_labels_paddingRight="8dp"
        fab:menu_labels_paddingTop="4dp"
        fab:menu_labels_position="left"
        fab:menu_labels_showShadow="true"
        fab:menu_labels_singleLine="false"
        fab:menu_labels_textColor="#FFFFFF"
        fab:menu_labels_textSize="14sp"
        fab:menu_openDirection="up"
        fab:menu_shadowColor="#66000000"
        fab:menu_shadowRadius="2dp"
        fab:menu_shadowXOffset="1dp"
        fab:menu_shadowYOffset="2dp"
        fab:menu_showShadow="true">

        <com.github.clans.fab.FloatingActionButton
            android:id="@+id/fab_filtro_limpar_todos"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_filter_remove_white_24dp"
            fab:fab_label="@string/fab_filtro_limpar_todos"
            fab:fab_size="mini" />

        <com.github.clans.fab.FloatingActionButton
            android:id="@+id/fab_filtro_tipo_conven"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_credit_card_white_24dp"
            fab:fab_label="@string/fab_filtro_tipo_convenio"
            fab:fab_size="mini" />

        <com.github.clans.fab.FloatingActionButton
            android:id="@+id/fab_filtro_tipo_atend"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_healing_white_24dp"
            fab:fab_label="@string/fab_filtro_tipo_atendimento"
            fab:fab_size="mini" />

        <com.github.clans.fab.FloatingActionButton
            android:id="@+id/fab_filtro_tipo_prof"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_school_white_24dp"
            fab:fab_label="@string/fab_filtro_tipo_profissional"
            fab:fab_size="mini" />

        <com.github.clans.fab.FloatingActionButton
            android:id="@+id/fab_filtro_tipo_serv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_local_hospital_white_24dp"
            fab:fab_label="@string/fab_filtro_tipo_servico"
            fab:fab_size="mini" />

        <com.github.clans.fab.FloatingActionButton
            android:id="@+id/fab_filtro_tipo_estab"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_stethoscope_white_24dp"
            fab:fab_label="@string/fab_filtro_tipo_estabelecimento"
            fab:fab_size="mini" />
    </com.github.clans.fab.FloatingActionMenu>

</android.support.design.widget.CoordinatorLayout>